# epeletii

./: .gitignore  Dockerfile  README.md
backend/: .env.example  Cargo.toml  dictionary.db
backend/src/: auth.rs  board.rs  dictionary.rs  game.rs  main.rs  protocol.rs  room.rs  tiles.rs
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthForm.tsx  ChatPanel.tsx  GameBoard.tsx  Lobby.tsx  ScorePopup.tsx  Scoreboard.tsx  TileRack.tsx
frontend/src/lib/: sound.ts  theme.ts  websocket.ts
frontend/src/store/: gameStore.ts
frontend/src/types/: game.ts
infra/: main.tf  outputs.tf  terraform.tfvars.example  user-data.sh  variables.tf
