[package]
name = "epeletii-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
dashmap = "6"
log = "0.4"
env_logger = "0.11"
mongodb = "3"
bcrypt = "0.16"
jsonwebtoken = "9"
chrono = "0.4"
